<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">人生如棋</string>
    <string name="about_txt">开发者:沉璧浮光\n当前版本:%s</string>
    <string name="rule_gobang">\t五子棋在众多棋类当中是最为简单粗暴的一种，简单只是说规则简单，对峙双方只要横/竖/斜向先连续五个棋子连一线即为胜者。\n\t由于先手方(黑棋)存在优势，目前也分为禁手和无禁手两种，本游戏里的五子棋暂时只支持无禁手规则，禁手规则将在后续完善，敬请期待。</string>
    <string name="rule_cnchess">1、棋子：\n象棋的棋子共三十二个，分为红黑两组，各十六个，由对弈双方各执一组，每组兵种是一样的，各分为七种：\n红方：帅、仕、相、车、马、炮、兵\n黑方：将、士、象、车、马、炮、卒\n其中帅与将、仕与士、相与象、兵与卒的作用完全相同，仅仅是为了区分红棋和黑棋\n2、各棋子的走法说明：\n将或帅\n移动范围：它只能在王宫内移动。\n移动规则：它每一步只可以水平或垂直移动一点。\n士\n移动范围：它只能在王宫内移动。\n移动规则：它每一步只可以沿对角线方向移动一点。\n象或相\n移动范围：河界的一侧。\n移动规则：它每一步只可以沿对角线方向移动两点，另外，在移动的过程中不能够穿越障碍。\n马\n移动范围：任何位置\n移动规则：每一步只可以水平或垂直移动一点，再按对角线方面向左或者右移动。另外，在移动的过程中不能够穿越障碍。\n车\n移动范围：任何位置\n移动规则：可以水平或垂直方向移动任意个无阻碍的点。 \n炮\n移动范围：任何位置\n移动规则：移动起来和车很相似，但它必须跳过一个棋子来吃掉对方的一个棋子。\n兵\n移动范围：任何位置\n移动规则：每步只能向前移动一点。过河以后，它便增加了向左右移动的能力，兵不允许向后移动。\n关于胜、负、和：\n对局中，出现下列情况之一，本方算输，对方赢：\n1）己方的帅（将）被对方棋子吃掉；\n2）己方发出认输请求；\n3）己方走棋超出步时限制；</string>
    <string name="rule_chess">1、国际象棋,又称西洋棋,棋盘是一个正方形，等分为64个方格。这些方格有深浅两种颜色，交替排列。深色的方格称为黑格，浅色的方格称为白格，棋子就放在这些格子中移动。国际象棋一共32个棋子，黑白双方各有16个棋子，浅颜色棋子一方称白棋；深颜色棋子一方称黑棋。每方棋子分别是：王(1个)、后(1个)、车(2个)、象(2个)、马(2个)、兵(8个)。\n2、每种棋子的走法：\n王\n横、直、斜都可以走，可进可退，但每步仅限走1格。(王车易位时除外)。\n后\n横、直、斜都可以走，可进可退，格数不限，但不能越子。它是所有棋子中威力最大。\n车\n横、直都可以走，可进可退，格数不限，但不能斜走，也不能越子。\n象\n只能斜走，可进可退，格数不限，但不能越子。每方各有两个象，占白格的称白格象，只能在白格里走；占黑格称黑格象，只能在黑格里走。\n马\n走法有点特别，先横走或直走1格，再沿离开原在格子的方向斜走1格，合起来为一步棋（即走\'日\'字，这点和中国象棋类似）。可以越子，可进可退(没有“中国象棋”中“蹩马腿”的限制)。\n兵\n只能向前直走，不能后退,在初始位置的兵，第一步可以选走1格或2格，以后每步只能走1格。兵的吃子方法与其走法不同，它只能向前斜进1格吃掉对方的棋子，所以它是直进斜吃。\n3、升兵、王车易位：\n升兵：\n如果己方的兵走到对方的底线时，这时候兵就可以升为除国王和兵以外的其它棋子，由于王后的威力最大，所以，兵经常升为王后。\n王车易位：\n游戏里暂时没有实现王车易位的规则，有关王车易位的规则详情可以网上查阅。</string>
    <string name="rule_reversi">1. 黑白棋的游戏过程是相互翻转对方的棋子，最后以棋盘上谁的棋子多来判断胜负。\n2. 游戏棋盘大小是8*8，初始状态是两枚白子和两枚黑子交叉于棋盘中央。\n3. 轮到某一方的回合时，落子的位置必须能够与己方棋子一起将敌方棋子夹住，可以是横、竖或斜向。\n4. 当轮到某方但无子可下时由对方继续走。有子可下时不能不下。\n5. 当双方均无处可落子时游戏结束，拥有棋子多者获胜。</string>
    <string name="rule_moon">\t西瓜棋，又名瓜棋、包棋、围瓜棋、簸箕棋、月亮棋、锅耳棋、肚脐棋、打伞棋、地球棋、月光棋，是流传于中国的两人棋类，与古罗马的熊棋有关，类似的棋类有铜钱棋。规则如下：\n\t如果一方的棋子完全被对方包围，该棋子死亡消失；若一方失去包围对方的能力，则该方输，对方赢(换言之，如果有一方的棋子数小于3，则该方败，对方胜)</string>
    <string name="rule_army">
        \t棋子介绍:军棋的棋子每方各有25个，分别为军旗、司令、军长各一；师长、旅长、团长、营长、炸弹各二；连长、排长、工兵、地雷各三。
        \n\t吃子规则:司令>军长 >师长> 旅长 >团长> 营长 >连长 >排长> 工兵，小棋遇大棋被吃，相同棋子相遇，则同归于尽；工兵能排除地雷，其它棋子不能排雷；炸弹与任何棋子相遇时同归于尽。
        \n\t获胜方法:杀光对方所有能移动的棋子则获得胜利；或者用工兵挖掉对方地雷后再用本方的棋子吃掉对方的军旗，也能获得胜利。
        \n\t翻棋:
        \n\t游戏开始:将棋子背面朝上后打乱，摆在兵站上。
        \n\t游戏规则:游戏开始时，玩家依次进行翻棋，首先翻出要使用的棋子，双方进行厮杀。
        \n\t暗棋、明棋:
        \n\t游戏开始:双方各自拿棋子布局。暗棋时己方棋子于对方不可见；明棋时双方棋子正面朝上。炸弹不能放在第一行，地雷只能放在最后两行，军旗只能放在大本营。
        \n\t注意:暗棋时，若司令被吃，被吃的一方亮出军旗。\n
    </string>

    <string name="game_rule">游戏规则</string>
    <string name="game_rule_title">%s规则</string>
    <string name="game_mode_double">双人对弈</string>
    <string name="game_mode_single">人机模式</string>
    <string name="game_mode_invite">在线约人</string>
    <string name="game_mode_online">在线联机</string>
    <string name="feedback">反馈</string>
    <string name="share">分享</string>
    <string name="share_to">分享到</string>
    <string name="share_content">人生如棋是一款大众棋类游戏合集，目前有五子棋、中国象棋、国际象棋、西瓜棋、黑白棋五个游戏，
        期待能在这里和你相遇，一起体会棋中的智慧与乐趣。[下载链接：http://app.mi.com/details?id=com.ue.chess_life]
    </string>

    <string name="submit">提交</string>
    <string name="user_profile">个人资料</string>
    <string name="logout">退出登录</string>
    <string name="getting_profile">正在获取用户信息，请稍等...</string>
    <string name="get_profile_failed">获取用户信息失败，请检查网络再试...</string>
    <string name="is_task_processing">当前有任务正在进行，请等待任务结束再试</string>
    <string name="input_new_nick">请输入新昵称：</string>
    <string name="nick_not_null">昵称不能为空喔</string>
    <string name="cancel">取消</string>
    <string name="sure">确定</string>

    <string name="app">App</string>

    <string name="faq_que1">1、无法进入在线模式</string>
    <string name="faq_ans1">版本更新之后如果无法进入在线模式，请尝试在应用设置中清除本应用数据再进入;</string>

    <string name="faq_que2">2、在线联机</string>
    <string name="faq_ans2">在线联机模式前需要校对好手机时间和时区哦，不同时间和时区的玩家可能无法一起游戏(T_T);</string>

    <string name="faq_que3">3、兼容性问题</string>
    <string name="faq_ans3">旧版本可能会存在兼容性问题，为了更好的体验，请点击版本号检查最新版本并进行升级;</string>

    <string name="faq_que4">4、帐户注册</string>
    <string name="faq_ans4">用户名现阶段只支持数字和字母组合，使用其它符号会导致注册失败;</string>

    <string name="faq_que5">5、其它问题</string>
    <string name="faq_ans5">请通过反馈功能或邮箱方式把问题反馈给我们，感谢您的支持!</string>

    <string name="support">支持</string>
    <string name="about">关于</string>

    <string name="nick_label">昵称：</string>
    <string name="sex_label">性别：</string>
    <string name="send">发送</string>

    <string name="recommend_app">推荐应用</string>
    <string name="tap_again_to_exit">再按一次退出应用</string>
    <string name="app_desc_label">应用介绍</string>
    <string name="app_desc">这是一款好玩的棋类游戏合集哦，有单机、双人、在线、 邀请四种模式，更可以邀请ta一起对战，还可以边玩边聊天哦。目前合集的游戏有：五子棋、走月光、中国象棋、苹果棋、国际象棋，更多好玩的正在来的路上，敬请期待与支持。\n\n特别感谢：感谢laserwave Github的开源黑白棋项目[Reversi]以及众大神们的笔记资料。</string>
    <string name="app_version">版本 %s</string>
    <string name="support_ad">支持&#038;广告</string>
    <string name="feedback_email">反馈 (%s)</string>
    <string name="support_tip">广告展示是本应用的唯一收入来源，您可以通过点击观看广告的方式来支持本应用。感谢您的支持！</string>
    <string name="faq">FAQ</string>
    <string name="slogan">人生如棋，棋思人生</string>
    <string name="click_to_skip">点击跳过</string>
    <string name="skip_text">点击跳过 %d</string>
    <string name="go_settings">去设置</string>
    <string name="no_ad_permissions">权限缺失</string>
    <string name="ad_permissions_tip">为了应用在Android 6.0以上能够正常使用，请在应用权限页授予所需权限。</string>
    <string name="user_name_label">用户名:</string>
    <string name="try_upgrade">*^_^* : 找不到游戏呢,升级到新版本试试吧.</string>

    <string name="network_unavailable">网络连接不可用，请检查网络</string>
    <string name="prompt">提示</string>
    <string name="connect_conflict">同一帐号已在其他设备登录</string>
    <string name="login">登录</string>
    <string name="user_name">用户名</string>
    <string name="password">密码</string>
    <string name="register">注册</string>
    <string name="is_landing">正在登录...</string>
    <string name="Login_failed">登录失败:</string>
    <string name="Is_the_registered">正在注册...</string>
    <string name="network_anomalies">网络异常，请检查网络！</string>
    <string name="illegal_user_name">用户名不合法</string>
    <string name="user_already_exist">该用户名已被注册</string>
    <string name="got_it">知道了</string>
    <string name="input_username">请输入用户名</string>
    <string name="input_password">请输入密码</string>
    <string name="authentication_failed">没有注册权限</string>
    <string name="register_failed">注册失败</string>
    <string name="register_success_login">注册成功，正在登录...</string>
    <string name="choose_order">选择先后手</string>
    <string name="choose_ai_level">选择关卡等级</string>

    <string name="tip_title">温馨提示</string>
    <string name="is_exit_game">确定退出游戏吗？</string>
    <string name="i_win">我赢了</string>
    <string name="game_result_draw">平局</string>
    <string name="i_lose">我输了</string>
    <string name="game_result">游戏结果</string>
    <string name="oppo_exit_game">对方退出了游戏</string>
    <string name="go_on">继续</string>
    <string name="exit">退出</string>
    <string name="undo_request">悔棋请求</string>
    <string name="undo_tip">对方请求悔棋，是否同意?</string>
    <string name="disagree">不同意</string>
    <string name="agree">同意</string>
    <string name="change_desk_tip">当前正在游戏中,确定换桌吗?</string>
    <string name="draw_request">和棋请求</string>
    <string name="draw_tip">对方请求和棋，是否同意?</string>
    <string name="invitation_time_out">邀请超时,已失效.可以尝试重新邀请.</string>
    <string name="refuse_invitation">对方拒绝了邀请</string>
    <string name="game_invitation">游戏邀请</string>
    <string name="refuse">拒绝</string>
    <string name="accept">接受</string>
    <string name="oppo_user_name">对方用户名：</string>
    <string name="sex_male">男</string>
    <string name="sex_female">女</string>
    <string name="no_nick">(空)</string>
    <string name="no_email">(空)</string>

    <string name="data_error">数据冲突，请清空本应用数据再试</string>
    <string name="game_data_error">*^_^* : 由于新旧版本的兼容问题导致游戏数据解析失败,请升级到最新版本再试!</string>

    <string name="choose_room">选择游戏区(当前是:%s):</string>

    <string name="robot">机器人</string>
    <string name="player_two">玩家二</string>
    <string name="me">wo</string>
    <string name="black">黑方</string>
    <string name="white">白方</string>
    <string name="red">红方</string>
    <string name="invite_to_start">*^_^* ：你要先约人或者被约才能开始</string>
    <string name="user_name_cannot_null">用户名不能为空哦</string>
    <string name="inviting">正在发送邀请,请稍等...</string>
    <string name="login_to_invite">登录后才能进入邀请模式</string>
    <string name="sending_draw_request">正在发送和棋请求,请稍等...</string>
    <string name="sending_undo_request">正在发送悔棋请求,请稍等...</string>
    <string name="inviting_someone">正在邀请[%s]...</string>
    <string name="oppo_not_undo">对方不同意悔棋</string>
    <string name="oppo_not_draw">对方不同意和棋</string>
    <string name="oppo_accept_invitation">对方接受了邀请</string>
    <string name="invite_tip" formatted="false">[%s] %s 邀你一起来玩 %s...</string>

    <string name="game_gobang">五子棋</string>
    <string name="game_moon">西瓜棋</string>
    <string name="game_reversi">黑白棋</string>
    <string name="game_cchess">中国象棋</string>
    <string name="game_ichess">国际象棋</string>
    <string name="finding_player">*^_^* ：正在寻找另一半，请稍等...</string>
    <string name="sending_room">正在传送至房间，请稍等...</string>
    <string name="error_enter_room">加入房间失败:</string>
    <string name="enter_room">%s 进入了房间</string>
    <string name="oppo_leave_room">%s 离开了房间</string>
    <string name="login_to_online">登录后才能进入在线模式</string>

    <string name="re_invite_tip">确定邀请新的玩家吗</string>
    <string name="change_room_tip">当前正在游戏中,确定换区吗?</string>
    <string name="game_unknown">[???](未知游戏,请检查版本是否已更新)</string>
    <string name="is_surrender">确定要认输吗?</string>
    <string name="i_surrender">我认输了</string>
    <string name="oppo_surrender">对方认输了</string>
    <string name="undo_sure">确定要悔棋吗?</string>
    <string name="draw_sure">确定要和棋吗?</string>
    <string name="undo_time_out">悔棋请求失效,可以尝试再次请求</string>
    <string name="draw_time_out">请求和棋失效,可以尝试再次请求</string>
    <string name="unknow_error">未知错误，错误码:%d。</string>

    <string name="new_one">新局</string>
    <string name="ai_level">等级</string>
    <string name="change_room">换区</string>
    <string name="undo">悔棋</string>
    <string name="change_desk">换桌</string>
    <string name="draw">和棋</string>
    <string name="invite">约人</string>
    <string name="surrender">认输</string>
    <string name="chat">聊天</string>
    <string name="start">开始</string>

    <string name="verNote_2d5d9">
        1.关于页添加版本日志项；\n
        2.应用推荐页添加应用搜索功能，找应用更方便啦；
        3、游戏页面优化；
        4、修复bug
    </string>

    <string name="verNote_2d5d8">
        1.修复bug；\n
        2.界面优化；\n
        3、添加应用推荐页；\n
        4.应用瘦身，体积降为原来一半；
    </string>

    <string name="verNote_2d5d5">
        1.修复bug；\n
        2.移除交流群等部分功能，专注游戏；\n
        3.界面优化；
    </string>

    <string name="verNote_1d0">
        完成功能：\n
        1.加入五个基础游戏：五子棋、黑白棋、月光棋、中国象棋、国际象棋；\n
        2.在线、邀请、双人、人机四个模式功能；\n
        3.游戏交流群；\n
        4.好友管理；
    </string>

    <string name="room_1">小仙区</string>
    <string name="room_2">大神区</string>

    <string name="ai_1">初出茅庐</string>
    <string name="ai_2">登堂入室</string>
    <string name="ai_3">炉火纯青</string>
    <string name="ai_4">出神入化</string>
    <string name="ai_5">傲视群雄</string>
    <string name="ai_6">登峰造极</string>
    <string name="ai_7">天人合一</string>

    <string name="myEmail" translatable="false">tomhawk_ht@foxmail.com</string>

    <string name="ver_2d5d9" translatable="false">v2.5.9    2017/12/07</string>
    <string name="ver_2d5d8" translatable="false">v2.5.8    2017/11/27</string>
    <string name="ver_2d5d5" translatable="false">v2.5.5    2017/7/02</string>
    <string name="ver_1d0" translatable="false">v1.0    2016/08</string>
</resources>
