<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="270dp"
    android:layout_height="wrap_content"
    app:cardCornerRadius="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="20dp"
        android:paddingTop="20dp">

        <ImageView
            android:id="@+id/ivGameIcon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            tools:src="@mipmap/ic_logo_cchess"/>

        <TextView
            android:id="@+id/tv_game_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:gravity="center"
            android:textColor="@color/col_444"
            android:textSize="16sp"
            tools:text="五子棋"/>

        <TextView
            android:id="@+id/igae_game_rule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="?attr/selectableItemBackground"
            android:text="@string/game_rule"
            android:textColor="@color/col_666"
            android:textSize="18sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/igae_online_mode"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/sel_online_mode_bg"
                android:gravity="center"
                android:text="@string/game_mode_online"
                android:textColor="@color/col_444"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/igae_invite_mode"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@drawable/sel_invite_mode_bg"
                android:gravity="center"
                android:text="@string/game_mode_invite"
                android:textColor="@color/col_444"
                android:textSize="18sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/igae_double_mode"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/sel_double_mode_bg"
                android:gravity="center"
                android:text="@string/game_mode_double"
                android:textColor="@color/col_444"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/igae_single_mode"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@drawable/sel_single_mode_bg"
                android:gravity="center"
                android:text="@string/game_mode_single"
                android:textColor="@color/col_444"
                android:textSize="18sp"/>
        </LinearLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>