<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.ue.chess_life.widget.ClearEditText
        android:id="@+id/tvUserName"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_alignRight="@+id/tvPassword"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:background="#fff"
        android:drawableLeft="@drawable/svg_account_wrapper"
        android:drawablePadding="5dp"
        android:hint="@string/input_username"
        android:maxLines="1"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"/>

    <com.ue.chess_life.widget.ClearEditText
        android:id="@+id/tvPassword"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_below="@id/tvUserName"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_toLeftOf="@+id/ivPswVisible"
        android:background="#fff"
        android:drawableLeft="@drawable/svg_password_wrapper"
        android:drawablePadding="5dp"
        android:hint="@string/input_password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"/>

    <ImageView
        android:id="@+id/ivPswVisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/tvPassword"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@id/tvPassword"
        android:layout_marginRight="10dp"
        app:srcCompat="@drawable/sel_psw_visibility"/>

    <Button
        android:id="@+id/btnSignUpIn"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_below="@id/tvPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@drawable/sel_common_btn"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="18sp"/>

</RelativeLayout>