<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/profile_avatar"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        app:srcCompat="@drawable/sel_sex"/>

    <LinearLayout
        android:id="@+id/ll_username_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/user_name_label"
            android:textColor="@color/col_808080"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/profile_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|right"
            android:layout_weight="1"
            android:gravity="center_vertical|right"
            android:paddingLeft="10dp"
            android:paddingRight="20dp"
            android:textColor="@color/col_3366cc"
            android:textSize="16sp"
            tools:text="user name"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_nick_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/nick_label"
            android:textColor="@color/col_808080"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/profile_nickname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|right"
            android:layout_weight="1"
            android:drawableRight="@drawable/svg_arrow_right_wrapper"
            android:gravity="center_vertical|right"
            android:paddingLeft="10dp"
            android:textColor="@color/col_3366cc"
            android:textSize="16sp"
            tools:text="nick"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_sex_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/sex_label"
            android:textColor="@color/col_808080"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/profile_sex"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:drawableRight="@drawable/svg_arrow_right_wrapper"
            android:gravity="center_vertical|right"
            android:paddingLeft="10dp"
            android:textColor="@color/col_3366cc"
            android:textSize="16sp"
            tools:text="sex"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:background="@drawable/sel_common_btn"
        android:padding="10dp"
        android:text="@string/logout"
        android:textColor="@color/white"/>
</LinearLayout>
